stylesheets/home.css
/* html, body {
  overflow-x: hidden;
} */

/* body {
  width:100%;
} */

h1 {
  font: Bold 18px/22px Helvetica;
  color: #354463;
  text-align: left;
  position: relative;
  top: 45px;
  left: 32px;
  width: 126px;
}


/* * {
  border: 1px solid black;
} */


.links-container {
  display: flex;
  flex-direction: column;
  text-align: right;
  height: 70px;
  justify-content: space-between;
  font: lighter 14px/20px Helvetica;
  letter-spacing: -0.14px;
  color: #354463;
  position: relative;
  bottom: 0.8rem;
  right: 0.8rem;
}

a {
  color:inherit;
  text-decoration: none;
 }

 .donate-text {
  font: Bold 18px/22px Helvetica;
  color: #354463;
  bottom: 10px;
  position: relative;
  width: 120px;
  left: 100px;
 }

 .donate-button {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  top: 150px;
  width: 312px;
  position: absolute;
  bottom: 100px;
  height: 40px;
  left: 1.2rem;
 }

 div.background-image {
  background: transparent url('/img/annie-spratt-135307-unsplash-mobile.png')  no-repeat padding-box;
  background-size: 100% 100%;
  height: 40rem;
  position: relative;
  top: 2rem;
 }

 .sylish-right-text {
  text-align: left;
  font: normal 44px/46px Flood Std;
  color: #FFFFFF;
  position: relative;
  left: 1.8rem;
  top: 2rem;
  width: 0rem;
 }

 .small-blue-box {
  background: #354463 0% 0% no-repeat padding-box;
  font: normal 14px/17px Helvetica;
  position: relative;
  width: 160px;
  height: 40px;
  letter-spacing: 0.56px;
  color: #FFFFFF;
  text-align: center;
  left: 6rem;
  z-index: 1;
  top: 5rem;
 }


 .issue-text {
   position: relative;
  top: 0.8rem;
 }

 .white-box {
  display: flex;
  flex-direction: column;
  justify-content: space-around; 
  width: 312px;
  height: 240px;
  background: #FFFFFF 0% 0% no-repeat padding-box; 
  position: relative;
  left: 1rem;
  z-index: 0; 
  top: 4rem; 
 }

  .white-box-bold {
    font: Bold 22px/28px Helvetica;
    text-align: center;
    color: #354463;
    width: 278px;
    height: 78px;
    align-self: center;
  }

 .white-link-text {
  text-align: center;
  text-decoration: underline;
  font: lighter 14px/17px Helvetica;
  letter-spacing: -0.16px;
  color: #354463;
  width: 15rem;
  padding-left:2rem;
 }

 .another-small-blue-box {
  background: #354463 0% 0% no-repeat padding-box;
  font: normal 14px/17px Helvetica;
  position: relative;
  width: 160px;
  height: 40px;
  letter-spacing: 0.56px;
  color: #FFFFFF;
  text-align: center;
 }

 .torquise-box {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  position: relative;
  align-content: center;
  width: 92%;
  height: 15.5rem;
  z-index: 2;
  top: 5rem;
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: 50% 50%;
  grid-gap: 0rem;
  padding: 1rem; 
  left: 0rem;
}

.bullet-title {
  font: Bold 18px/22px Helvetica;
  color: #354463;
}

.subtext-torquire-box {
  width: 100%;
  height: 62px;
  font: lighter 14px/20px Helvetica;
  letter-spacing: -0.14px;
  color: #354463;
}

.another-small-blue-box {
    position: relative;
    top: 6rem;
    z-index: 3;
    left: 5rem;
}

.issue-text-take {
  position: relative;
  top: 0.8rem;
}

.what-we-do-blue-box {
  width: 100%;
  height: 1850px;
  background: #354463 0% 0% no-repeat padding-box;
  position: relative;
  top: 16rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  
}

.button-what-we-do {
  position: relative;
  width: 160px;
  height: 40px;
  background: #FFFFFF 0% 0% no-repeat padding-box;
  top: 3rem;
}

.text-what-we-do{
  text-align: center;
  font: normal 14px/17px Helvetica;
  letter-spacing: 0.56px;
  color: #354463;
  
}

.mission-text {
  position: relative;
  text-align: center;
  font: Bold 22px/28px Helvetica;
  letter-spacing: 0;
  color: #FFFFFF;
  width: 302px;
  height: 134px;
  
}

.white-box-second {
  width: 312px;
  height: 415px;
  background: #FFFFFF 0% 0% no-repeat padding-box;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.center-small-img {
  position: relative;
  bottom: 2rem;
}

.title-text-whitebox {
  text-align: center;
  font: Bold 18px/22px Helvetica;
  color: #354463;
}

.subtext-whitebox-blue {
  text-align: center;
  font: lighter 14px/20px Helvetica;
  letter-spacing: -0.14px;
  color: #354463;
}

.readmore-button-one {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  width: 152px;
  height: 40px;
  font: Bold 16px/20px Helvetica;
  letter-spacing: 0;
  color: #354463;
}
.readmore-button-two {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  width: 152px;
  height: 40px;
  font: Bold 16px/20px Helvetica;
  letter-spacing: 0;
  color: #354463;
}

.readmore-button-three {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  width: 152px;
  height: 40px;
  font: Bold 16px/20px Helvetica;
  letter-spacing: 0;
  color: #354463;
}

.readmore-text {
  position: relative;
  text-align: center;
  bottom: 0.5rem;
}






   /*For Tablet */

 @media only screen  and (min-width: 500px) and  (max-width: 768px) {
  .links-container {
    flex-direction: row;
    height: 70px;
    font: lighter 16px/24px Helvetica;
    letter-spacing: -0.16px;
    width: 27rem;
    top: 2.8rem;
    left: 2.8rem;
  }

  .donate-button {
    top: 3.5rem;
    left: 564px;  
    width: 140px;
    height: 48px;
  }

  .donate-text {
    font: Bold 18px/22px Helvetica;
    bottom: 5px;
    position: relative;
    left: 16px;
    width: 141px;
    height: 18px;
   }

   div.background-image {
    background: transparent url('/img/annie-spratt-135307-unsplash-tablet.png') 0% 0% no-repeat padding-box;
    top: 0rem;
    height: 100%;
   }

   .small-blue-box {
    position: relative;
    width: 160px;
    height: 40px;
    text-align: center;
    left: 6rem;
    top: 5rem;
   }

   .white-box {
    width: 640px;
    height: 309px;
    position: relative;
    left: 1rem;
    z-index: 0; 
    top: 4rem; 
   }
   
   .white-box-bold {
    font: Bold 36px/46px Helvetica;
    text-align: left;
    width: 512px;
    height: 138px;

   }
  
   .white-link-text {
    font: lighter 14px/17px Helvetica;
    letter-spacing: -0.16px;
    width: 21rem;
    padding-left: 4rem;
   }

   .torquise-box {
    position: relative;
    align-content: center;
    width: 83%;
    height: 336px;
    z-index: 2;
    top: 5rem;
    display: grid;
    grid-gap: 0rem;
    padding: 4rem;
  }

  

  .bullet-title {
    font: Bold 22px/28px Helvetica;
    color: #354463;
  }


  .subtext-torquire-box {
    width: 256px;
    height: 62px;
    font: lighter 16px/24px Helvetica;
    letter-spacing: -0.16px;
    color: #354463;
  }

  .another-small-blue-box {
    position: relative;
    top: 6rem;
    z-index: 3;
    left: 18rem;
}

.what-we-do-blue-box {
  position: relative;
  top: 5rem;
}

.button-what-we-do {
  position: relative;
  right: 14rem;

 }

 .mission-text {
  position: relative;
  text-align: left;
  font: Bold 32px/46px Helvetica;
  width: 640px;
  height: 140px;
}


.white-box-second {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  width: 640px;
  height: 280px;
}
.center-small-img {
  bottom: 5rem;
  left: 1.5rem;
  }

.title-text-whitebox {
  font: Bold 22px/28px Helvetica;
  text-align: left;
  width: 50rem;
  height: 50px;
  position: relative;
  bottom: 8rem;
  left: 3.5rem;
}
.subtext-whitebox-blue {
position: relative;
text-align: left;
font: lighter 16px/24px Helvetica;
letter-spacing: -0.16px;
right: 6rem;
top: 2rem;

}

.readmore-button-one {
  font: Bold 18px/22px Helvetica;
  position: absolute;
  top: 48rem;
  right: 27rem;
  width: 156px;
  height: 47px;
}


.readmore-button-two {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  font: Bold 18px/22px Helvetica;
  position: absolute;
  width: 156px;
  height: 47px;
  left: 9.5rem;
  top: 78.5rem;
}

.readmore-button-three {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  font: Bold 18px/22px Helvetica;
  position: absolute;
  width: 156px;
  height: 47px;
  left: 10.5rem;
  top: 109rem;
}

}



/*For larger screen PC */

 @media only screen  and (min-width: 800px) {

  h1 {
    font: Bold 22px/28px Helvetica;
    letter-spacing: 0;
    width: 10rem;
    left: 160px;
    position: relative;
  }

  .links-container {
    display: flex;
    flex-direction: row;
    height: 70px;
    width: 38%;
    font: lighter 16px/24px Helvetica;
    letter-spacing: -0.16px;
    position: relative;
    left: 33rem;
  }

  .donate-button {
    border-radius: 100px;
    top: 61px;
    width: 160px;
    height: 48px;
    position: absolute;
    bottom: 91px;
    left: 73.2rem;
   }

   .donate-text {
    font: Bold 18px/22px Helvetica;
    bottom: 5px;
    position: relative;
    left: 20px;
   }

   div.background-image {
    background: transparent url('/img/annie-spratt-135307-unsplash-home.png') 0% 0% no-repeat padding-box;
   }

   .sylish-right-text {
      position: relative;
      font: normal 74px/76px Flood Std;
      top: 128px;
    left: 838px;
      width: 296px;
      height: 224px;
  }

   .white-box {
    position: absolute;
    left: 160px;
    top: 7rem;
    width: 544px;
    height: 416px;
   }

   .white-box-bold {
    font: Bold 44px/56px Helvetica;
    text-align: center;
    width: 416px;
    height: 200px;
    align-self: center;
   }

   .white-link-text {
    font: lighter 16px/24px Helvetica;
    padding-bottom: 4rem;
    width: 24rem;
    padding-left: 5rem;
   }

   .issue-text {
    position: relative;
   top: 0rem;
  }
   .small-blue-box {
    position: absolute;
    left: 16rem;
    top: 6rem;
   }


   .bullet-title {
    font: Bold 28px/36px Helvetica;
    color: #354463;
  }

  

.subtext-torquire-box {
  /* width: 100%; */
  width: 232px;
  height: 62px;
  font: lighter 16px/24px Helvetica;
  letter-spacing: -0.16px;
  color: #354463;
}

.torquise-box {
  position: relative;
  align-content: center;
  width: 91%;
  height: 170px;
  z-index: 2;
  top: 20rem;
  display: grid;
  grid-template-columns: 25% 25% 25% 25%;
  grid-row: 1;
  grid-gap: 0rem;
  padding: 4rem;
}

.another-small-blue-box {
  position: relative;
  top: 21rem;
  z-index: 3;
  left: 38rem;
}
.issue-text-take {
  position: relative;
  top: 0.8rem;
}

.what-we-do-blue-box {
  height: 1327px;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
}

.button-what-we-do {
  position: absolute;
  top: 6rem;
  left: 4rem;
}

.mission-text {
  position: absolute;
  text-align: left;
  font: Bold 42px/56px Helvetica;
  width: 1146px;
  height: 140px;
  top: 8rem;
  left: 4rem;
}
 }

